--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xonix"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 authors = ["Denis Salmanovich"]
 readme = "README.md"
@@ -9,3 +9,4 @@ readme = "README.md"
 
 [dependencies]
 macroquad = "0.3.25"
+macroquad-virtual-joystick = "0.2.0"
